# finance-datalake

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
api/: main.py
dags/: pipeline.py
src/: apply_model.py  benchmark.py  ingest_api.py  load_to_staging.py  staging_to_curated.py  test_connections.py  train_model.py  unpack_data.py
