[project]
name = "finance-datalake"
version = "0.1.0"
description = "Projet final - Data Lake financier (S&P 500 + yfinance) avec detection d'anomalies"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "boto3>=1.35",
    "mysql-connector-python>=9.0",
    "pymongo>=4.10",
    "yfinance>=0.2.40",
    "torch>=2.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "numba>=0.60",
    "tqdm>=4.67",
    "kaggle>=1.6"
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "notebook",
    "matplotlib",
    "seaborn"
]